[package]
name = "valu3-derive"
version = "0.9.1"
edition = "2021"
license = "Apache-2.0"
readme = "crates-io.md"
authors = ["Philippe Assis <codephilippe@gmail.com>"]
repository = "https://github.com/lowcarboncode/valu3"
keywords = ["valu3", "serialization", "deserialization", "serde", "derive"]
description = "Derive macros for the valu3 crate."
categories = ["encoding", "no-std", "parsing"]
documentation = "https://docs.rs/valu3-derive"


[dependencies]
syn = { version = "2.0.100", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.94"

[dev-dependencies]
valu3 = { path = "../valu3" }
macrotest = "1.1.0"

[lib]
proc-macro = true

[[test]]
name = "derive_test"
path = "tests/derive_test.rs"

[[test]]
name = "tests"
path = "tests/tests.rs"
